<resources>
    <string name="app_name">오늘의 집 - 엘라곰</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->

    <!-- Login-->
    <string name="login_txt_money">가입하면 최대 20,000원"</string>
    <string name="login_txt_coupon">즉시할인 쿠폰 증정</string>
    <string name="login_btn_kakao">카카오톡으로 계속하기</string>
    <string name="login_btn_or">또는</string>

    <string name="kakao_app_key">8624d5ff5b29c05957cc3c8fdd7e422c</string>

    <!-- email -->
    <string name="email_btn_sign_up">이메일로 가입하기</string>
    <string name="email_btn_sign_in">이메일로 로그인하기</string>
    <string name="email_btn_back">←</string>

    <!-- pw reset -->
    <string name="pw_reset_txt_title">비밀번호 찾기</string>
    <string name="pw_reset_txt_email">이메일</string>
    <string name="pw_reset_btn_reset">이메일로 비밀번호 찾기</string>

    <!-- Sign in -->
    <string name="sign_in_txt_title">이메일로 로그인</string>
    <string name="sign_in_btn_login">로그인하기</string>
    <string name="sign_in_btn_pw_reset">비밀번호 재설정</string>
    <string name="sign_in_btn_hint_email">이메일</string>
    <string name="sign_in_btn_hint_pw">비밀번호</string>

    <!-- Sign up -->
    <string name="sign_up_txt_title">이메일로 가입</string>
    <string name="sign_up_txt_pro">인테리어 전문가이시다면 ></string>
    <string name="sign_up_btn_sign_up">회원가입 완료</string>
    <string name="sign_up_btn_hint_email">이메일</string>
    <string name="sign_up_btn_hint_pw">비밀번호</string>
    <string name="sign_up_btn_hint_pw_repeat">비밀번호 확인</string>
    <string name="sign_up_btn_hint_nickname">별명(중복불가)</string>
    <string name="sign_up_txt_hint_email_warn">이메일을 입력해주세요.</string>
    <string name="sign_up_txt_hint_email_warn2">이메일 형식이 올바르지 않습니다.</string>
    <string name="sign_up_txt_hint_pw_warn">비밀번호를 8자 이상 입력해주세요.</string>
    <string name="sign_up_txt_hint_pw_repeat_warn">확인을 위해 비밀번호를 한 번 더 입력해주세요.</string>
    <string name="sign_up_txt_hint_pw_repeat_warn2">"두 비밀번호가 일치하지 않습니다."</string>
    <string name="sign_up_txt_hint_nickname_warn">별명을 2~15자 내로 입력해주세요.</string>
    <string name="sign_up_txt_agree">약관 동의</string>
    <string name="sign_up_txt_agree_all">전체 동의</string>
    <string name="sign_up_txt_must"> (필수)</string>
    <string name="sign_up_txt_not_must"> (선택)</string>
    <string name="sign_up_txt_year">만 14세 이상입니다. </string>
    <string name="sign_up_txt_context">이용약관 </string>
    <string name="sign_up_txt_service">개인정보수집 및 이용동의 </string>
    <string name="sign_up_txt_event">특가, 쿠폰 등 이벤트 알림 이메일, 문자  </string>
    <string name="sign_up_txt_agree_warn">이용약관, 개인정보처리방침에 동의해주세요.</string>
    <string name="sign_up_txt_recommend">친구에게 추천받고 오셨나요? (선택사항)</string>
    <string name="sign_up_txt_hint_code">추천코드 입력</string>
    <string name="sign_up_btn_ok">확인</string>

    <!-- Main -->
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_my_page_title">마이페이지</string>
    <string name="main_btm_nav_store_title">스토어</string>
    <string name="main_btm_nav_interior_title">인테리어시공</string>

    <!-- Home -->
    <string name="home_txt_hint_search">오늘의집 통합검색</string>
    <string name="home_tab_popular">&#160;인기&#160;</string>
    <string name="home_tab_photo">&#160;사진&#160;</string>
    <string name="home_tab_house">&#160;집들이&#160;</string>
    <string name="home_tab_tip">&#160;노하우&#160;</string>
    <string name="home_tab_pro">&#160;전문가집들이&#160;</string>
    <string name="home_tab_qna">&#160;질문과답변&#160;</string>

    <!-- popular -->
    <string name="home_tab_icon_shopping">쇼핑하기</string>
    <string name="home_tab_icon_wedding">프리미엄</string>
    <string name="home_tab_icon_looking">평수별집구경</string>
    <string name="home_tab_icon_place">공간별사진</string>
    <string name="home_tab_icon_consult">빠른시공상담</string>
    <string name="home_tab_icon_find">시공업체찾기</string>
    <string name="home_tab_icon_guide">가이드북</string>
    <string name="home_tab_icon_gift">혜택모아보기</string>

    <string name="popular_title1">오늘의 스토리</string>
    <string name="popular_btn_setting">맞춤정보 설정</string>
    <string name="popular_btn_more1">집들이 더보기</string>
    <string name="popular_txt_title2">카테고리별 상품 찾기</string>

    <!-- store -->
    <string name="store_txt_hint_search">스토어 검색</string>
    <string name="store_tab_store_home">스토어홈</string>
    <string name="store_tab_premium">프리미엄</string>
    <string name="store_tab_best">베스트</string>
    <string name="store_tab_today_deal">오늘의딜</string>
    <string name="store_tab_reaper">리퍼마켓4차</string>
    <string name="store_tab_dowry">혼수가전</string>
    <string name="store_tab_spring">봄이불특가</string>
    <string name="store_tab_plan">기획전</string>

    <!-- store home -->
    <string name="store_home_menu1">가구</string>
    <string name="store_home_menu2">패브릭</string>
    <string name="store_home_menu3">홈데코</string>
    <string name="store_home_menu4">수납/정리</string>
    <string name="store_home_menu5">생활용품</string>
    <string name="store_home_menu6">가전</string>
    <string name="store_home_menu7">주방</string>
    <string name="store_home_menu8">더보기</string>
    <string name="store_home_menu8_click">반려동물</string>
    <string name="store_home_menu9">그릇/홈세트</string>
    <string name="store_home_menu10">조명</string>
    <string name="store_home_menu11">러그/카페트</string>
    <string name="store_home_menu12">커튼/블라인드</string>
    <string name="store_home_menu13">수납가구</string>
    <string name="store_home_menu14">홈트레이닝</string>
    <string name="store_home_menu15">캠핑용품</string>
    <string name="store_home_menu16">인테리어시공</string>
    <string name="store_home_item">인기상품</string>
    <string name="store_home_hide">접기</string>

    <!-- product detail -->
    <string name="product_txt_price">주문금액</string>
    <string name="product_btn1">장바구니</string>
    <string name="product_btn2">바로구매</string>

    <!-- interior -->
    <string name="interior_txt_hint">전문가 검색</string>

    <!-- my page -->
    <string name="my_page_profile">프로필</string>
    <string name="my_page_my_shopping">나의쇼핑</string>
    <string name="my_page_follow">팔로우</string>
    <string name="my_page_following">팔로잉</string>
    <string name="my_page_btn">친구 초대하고 5,000P 받기</string>
    <string name="my_page_btn1">알림</string>
    <string name="my_page_btn2">스크랩</string>
    <string name="my_page_btn3">좋아요</string>

    <!-- setting -->
    <string name="my_page_txt_setting">설정</string>
    <string name="my_page_list1">프로필 수정</string>
    <string name="my_page_list2">맞춤정보 설정</string>
    <string name="my_page_list3">비밀번호 변경</string>
    <string name="my_page_list4">내 활동</string>
    <string name="my_page_list5">알림 설정</string>
    <string name="my_page_list6">오늘의 집이 궁금해요</string>
    <string name="my_page_list7">공지사항</string>
    <string name="my_page_list8">자주 묻는 질문</string>
    <string name="my_page_list9">의견 보내기</string>
    <string name="my_page_list10">서비스 이용 약관</string>
    <string name="my_page_list11">개인보호 정책</string>
    <string name="my_page_list12">버전정보</string>
    <string name="my_page_list12_under">현재 최신버전입니다.</string>
    <string name="my_page_list13">로그아웃</string>
    <string name="product_won">원</string>
    <string name="product_list_review">리뷰</string>
    <string name="product_list_company_tmp">우드레이</string>
    <string name="product_list_special_price">특가</string>
    <string name="product_list_delivery">무료배송</string>
    <string name="deal_six">6일 남음</string>
    <string name="store_home_txt_deal">오늘의딜</string>
    <string name="store_home_more">더보기</string>
    <string name="store_home_btn_deal_more">오늘의딜 더보기</string>
    <string name="store_home_txt_keyword">인기 키워드</string>

    <string name="today_deal">오늘의딜</string>
    <string name="my_page_more">〉</string>
    <string name="my_page_list_my_shopping">나의 쇼핑</string>
    <string name="my_page_list_house">집들이</string>
    <string name="my_page_list_photo">사진</string>
    <string name="my_page_list_photo_point">첫 사진을 올리면 + 1,000P</string>
    <string name="my_page_photo_detail">우리 집의 변화를 공간별로 기록하고 모아볼 수 있어요.</string>
    <string name="my_page_list_tip">노하우</string>
    <string name="my_page_list_qna">질문과답변</string>
    <string name="my_page_list_review_write">리뷰쓰기</string>
    <string name="my_page_list_review">리뷰</string>
    <string name="my_page_upload_photo">사진 올리기</string>
    <string name="product_category_next"><![CDATA[〉]]></string>
    <string name="product_detail_won">원</string>
    <string name="product_detail_style">유저들의 스타일링샷</string>
    <string name="product_photo1">첫 사진 올리면 1,000 포인트를 드려요.</string>
    <string name="product_photo2">혜택보기</string>
    <string name="product_photo3">지금 살고 있는 공간을 공유하고</string>
    <string name="product_photo4">포인트를 받아 쇼핑도 즐겨보세요!</string>
    <string name="product_detail_save_point">적립 (WELCOME 0.3% 적립)</string>
    <string name="product_detail_delivery">무료배송 &#160; 〉</string>
    <string name="product_detail_delivery1">일반택배</string>
    <string name="product_detail_delivery2">&#160;제주도/도서산간 3,500원</string>
    <string name="product_detail_brand_home">브랜드 홈&#160; 〉</string>
    <string name="product_detail_open">펼치기 &#160; ⌵</string>
    <string name="product_detail_info">상품정보</string>
    <string name="product_detail_review">리뷰</string>
    <string name="product_detail_qna">문의</string>
    <string name="product_detail_delivery_refund">배송/환불</string>
    <string name="product_detail_recommend">추천</string>
    <string name="product_detail_review_more">리뷰 더보기 (</string>
    <string name="product_detail_close_txt">)</string>
    <string name="delivery_exchange_refund">배송/교환/환불</string>
    <string name="product_detail_plan">이 상품이 포함된 기획전</string>
    <string name="product_detail_recommend_product">비슷한 상품</string>
    <string name="category_1">소파/거실가구</string>
    <string name="category2">침실가구</string>
    <string name="category3">드레스룸</string>
    <string name="category5">학생/서재가구</string>
    <string name="category4">주방가구</string>
    <string name="category6">수납가구</string>
    <string name="category7">테이블</string>
    <string name="category8">의자/스툴</string>
    <string name="category9">유아동가구</string>
    <string name="category_more">〉</string>
    <string name="plus_btn_upload"><u>집들이,노하우 업로드 안내</u></string>
    <string name="home_popular_bottom3"><![CDATA[(주말 & 공휴일 제외)]]></string>

</resources>