<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:enabled="true"
        android:checkable="true"
        android:title="@string/main_btm_nav_home_title" />
    <item
        android:id="@+id/menu_main_btm_nav_store"
        android:icon="@drawable/ic_store"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_store_title" />
    <item
        android:id="@+id/menu_main_btm_nav_interior"
        android:icon="@drawable/ic_interior"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_interior_title" />

    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/ic_my_page"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_my_page_title" />
    <item
        android:id="@+id/menu_main_btm_nav_plus"
        app:showAsAction="always"
        android:enabled="false"
        android:title=" " />

</menu>
