<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_page_txt_setting"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/email_btn_back"
            android:textColor="@color/black"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.509" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grayBorder"
            android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/browser_actions_bg_grey" />
            <TextView
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="0.5dp"
                android:layout_height="40dp"
                android:paddingStart="24dp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0.5dp"
                android:paddingStart="24dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0.5dp"
                android:paddingStart="24dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0.5dp"
                android:paddingStart="24dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="0.5dp"
                android:layout_marginTop="0.5dp"
                android:paddingStart="24dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list5"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/browser_actions_bg_grey" />
            <TextView
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_marginTop="0.5dp"
                android:layout_height="40dp"
                android:paddingStart="24dp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list6"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0.5dp"
                android:paddingStart="24dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list7"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0.5dp"
            android:paddingStart="24dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/my_page_list8"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0.5dp"
            android:paddingStart="24dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/my_page_list9"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="0.5dp"
                android:paddingStart="24dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/my_page_list10"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0.5dp"
            android:paddingStart="24dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/my_page_list11"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="0.5dp"
                android:layout_marginBottom="0.5dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_page_list12"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:text="v9.44.0"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/my_page_list12_under"
                    android:textColor="@color/colorMainBlue"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/browser_actions_bg_grey" />
        <TextView
            android:id="@+id/btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0.5dp"
            android:paddingStart="24dp"
            android:background="@color/white"
            android:layout_marginBottom="0.5dp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/my_page_list13"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
