<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.softsquared.template.kotlin.src.main.home.popular.NewScrollView
        android:id="@+id/main_scroll_view"
        android:fillViewport="true"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <!--액션바 생성-->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!--툴바 생성-->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="1dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/round_border"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="30dp"
                        android:layout_height="26dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="1dp"
                        android:src="@drawable/search" />
                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="20dp"
                        android:textSize="15dp"
                        android:hint="@string/home_txt_hint_search"
                        android:layout_gravity="center"
                        android:textColorHint="@color/grayBorder"
                        android:background="@color/browser_actions_bg_grey"/>

                </LinearLayout>
                <ImageView
                    android:id="@+id/img_scrap"
                    android:layout_width="32dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="5dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/scrap" />
                <ImageView
                    android:id="@+id/img_cart"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/cart" />
            </androidx.appcompat.widget.Toolbar>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:elevation="1dp"
                android:background="@android:color/background_light"
                app:tabMode="scrollable"
                app:tabGravity="center"
                app:tabMinWidth="30dp"
                app:tabIndicatorFullWidth="false"
                app:tabTextColor="@color/colorPrimary"
                app:tabSelectedTextColor="@color/colorAccent">

                <com.google.android.material.tabs.TabItem

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tab_popular" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tab_photo" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tab_house" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tab_tip" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tab_pro" />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_tab_qna" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>




                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vPager2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />




        </LinearLayout>
    </com.softsquared.template.kotlin.src.main.home.popular.NewScrollView>
</FrameLayout>